--- a/package.json
+++ b/package.json
@@ -14,12 +14,10 @@
     "@emotion/styled": "^11.14.0",
     "@mui/icons-material": "^6.4.8",
     "@mui/material": "^6.4.8",
-    "@tailwindcss/postcss": "^4.0.16",
-    "@tailwindcss/postcss7-compat": "^2.2.17",
     "formik": "^2.4.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "tailwindcss": "^4.0.16",
+    "react-router-dom": "^7.4.0",
     "yup": "^1.6.1"
   },
   "devDependencies": {
@@ -33,6 +31,8 @@
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^15.15.0",
     "postcss": "^8.5.3",
+    "sass": "^1.86.0",
+    "tailwindcss": "^3.4.17",
     "typescript": "~5.7.2",
     "typescript-eslint": "^8.24.1",
     "vite": "^6.2.0"
