--- a/package.json
+++ b/package.json
@@ -10,16 +10,20 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@coreui/react-chartjs": "^3.0.0",
+    "@coreui/utils": "^2.0.2",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@mui/icons-material": "^6.4.10",
     "@mui/joy": "^5.0.0-beta.52",
     "@mui/material": "^6.4.10",
     "@toolpad/core": "^0.13.0",
+    "chart.js": "^4.4.8",
     "formik": "^2.4.6",
     "idb": "^8.0.2",
     "material-ui-popup-state": "^5.3.4",
     "react": "^19.0.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.4.1",
     "recharts": "^2.15.2",
