--- a/package.json
+++ b/package.json
@@ -16,15 +16,21 @@
     "@emotion/styled": "^11.14.0",
     "@mui/icons-material": "^6.4.10",
     "@mui/joy": "^5.0.0-beta.52",
-    "@mui/material": "^6.4.10",
+    "@mui/material": "^6.4.11",
+    "@reduxjs/toolkit": "^2.7.0",
+    "@tiptap/extension-underline": "^2.11.7",
+    "@tiptap/react": "^2.11.7",
+    "@tiptap/starter-kit": "^2.11.7",
     "@toolpad/core": "^0.13.0",
-    "chart.js": "^4.4.8",
+    "chart.js": "^4.4.9",
+    "chartjs-plugin-datalabels": "^2.2.0",
     "formik": "^2.4.6",
     "idb": "^8.0.2",
     "material-ui-popup-state": "^5.3.4",
     "react": "^19.1.0",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.1.0",
+    "react-redux": "^9.2.0",
     "react-router-dom": "^7.4.1",
     "recharts": "^2.15.2",
     "yup": "^1.6.1"
