--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@tiptap/starter-kit": "^2.11.7",
     "@toolpad/core": "^0.13.0",
     "chart.js": "^4.4.9",
+    "chartjs-plugin-annotation": "^3.1.0",
     "chartjs-plugin-datalabels": "^2.2.0",
     "formik": "^2.4.6",
     "idb": "^8.0.2",
